theme.css
/* ... */
/* ─────────────────────────────────────────────────── */
/* SETTINGS MODAL                                      */
/* ─────────────────────────────────────────────────── */
.setting-item.setting-item-heading,
.vertical-tab-content h2 {
  border-bottom: 1px solid rgba(0, 0, 0, .1);
  padding-bottom: 10px;
  font-size: 1.3rem !important;
}
.vertical-tab-content h3 {font-size: 1rem;}
.theme-dark .setting-item.setting-item-heading {border-bottom: 1px solid rgba(255, 255, 255, .1)}

.setting-item {border-top: none;}

.setting-item-description {
  color: var(--setting-item-description-color);
}

.vertical-tab-nav-item {cursor: pointer;}
.modal.mod-settings .vertical-tab-header {border-right: none;}

/* ─────────────────────────────────────────────────── */
/* TAB BAR HEADER                                      */
/* ─────────────────────────────────────────────────── */
/* .workspace-tab-header-container {border: none} */
.workspace-tab-header.is-active {box-shadow: none;}
.workspace-tab-header {border-radius: 0;}

.workspace-tab-header-inner:after,
.workspace-split.mod-root .workspace-tab-header.is-active::after,
.workspace-split.mod-root .workspace-tab-header.is-active::before {display: none;}

.clickable-icon {color: #B9B8B5; cursor: pointer;}

/** scroll bars **/
::-webkit-scrollbar {
  width: 9px;
}

::-webkit-scrollbar-track {
  background: var(--scrollbar-background);
}

::-webkit-scrollbar-thumb {
  background-color: var(--scrollbar-color);
  border-radius: 0;
  border: 0px;
}

/* ─────────────────────────────────────────────────── */
/* MAKE.md Plugin custom */
/* ─────────────────────────────────────────────────── */

div.mk-header.cm-line {padding-bottom: 50px !important;}
.mk-header .mk-file-context-file .mk-file-icon,
.mk-header .mk-file-icon button {
  width: 70px; 
  height: 70px;
}

.mk-header .mk-file-context-file .mk-file-icon {
  transform: translate(0, -19px);
}

.mk-header .mk-file-icon button {font-size: 70px;}

/** hidding the inline title of the context option make.md **/
.mk-file-context-file .mk-inline-title.inline-title,
.markdown-source-view.mod-cm6.is-readable-line-width .mk-file-context-file > .mk-inline-title.inline-title {display: none !important;}

.mk-file-context-collapse {left: -25px; top: 95px;cursor: pointer;}
.mk-header .mk-file-context-collapse.mk-collapsed svg {color: rgba(0, 0, 0, .2);}

.mk-collapse.mk-icon-xsmall.mk-file-context-collapse.mk-collapsed:after {
  content: "Collapsed";
  color: rgba(0, 0, 0, .2)
}

.menu {
  background: #fff;
  border-radius: 5px;
}

.mk-menu-input input {
  width: 100%;
  font-size: 12px;
  line-height: 20px;
  padding: 3px 6px;
  position: relative;
  border-radius: 4px;
  box-shadow: rgba(15, 15, 15, 0.1) 0px 0px 0px 1px inset;
  background: rgba(242, 241, 238, 0.6);
  cursor: text;
  height: 28px;
}

.mk-options-menu__suggestions {overflow-x: hidden;}

.cm-line.mk-placeholder:before {
  font-size: .9rem !important;
  top: 2px;
  cursor: default;
}

body:not(.is-mobile) .mk-tree-wrapper .mk-drag-handle {cursor: grab;}

.mk-tree-item.nav-folder-title.is-active.is-selected,
.mk-tree-item.nav-file-title.is-active.is-selected,
.mk-tree-item.nav-file-title.is-active.is-selected:hover {font-weight: bold;}

.theme-dark .mk-tree-item.nav-folder-title.is-active.is-selected,
.theme-dark .mk-tree-item.nav-file-title.is-active.is-selected {color: #fff;}

/* ------------------- */
/* Tasks Plugin */
/* ------------------- */
h5.tasks-group-heading {
  font-size: 17px;
  padding-top: 5px;
}

h4.tasks-group-heading:first-child {
  border-top: none;
  margin-top: 0;
}
h4.tasks-group-heading {
  font-size: 21px;
  padding-top: 20px;
  margin-top: 40px;
  border-top: 1px solid rgba(0, 0, 0, .1);
}

li.task-list-item.plugin-tasks-list-item {
  margin-bottom: 7px;
  line-height: 1.5;
}

ul.plugin-tasks-query-result,
ol.plugin-tasks-query-result {
  padding-left: 0;
  font-size: .9rem;
}

/* ------------------- */
/* Checkbox styling & icons. Credit Minimal theme: https://minimal.guide/Block+types/Checklists#Checkbox+styling */
/* Support @kepano - https://www.buymeacoffee.com/kepano */
/* ------------------- */

input[data-task='!']:checked,
input[data-task='*']:checked,
input[data-task='-']:checked,
input[data-task='<']:checked,
input[data-task='>']:checked,
input[data-task='I']:checked,
input[data-task='b']:checked,
input[data-task='c']:checked,
input[data-task='d']:checked,
input[data-task='f']:checked,
input[data-task='k']:checked,
input[data-task='l']:checked,
input[data-task='p']:checked,
input[data-task='u']:checked,
input[data-task='w']:checked,
li[data-task='!'] > input:checked,
li[data-task='!'] > p > input:checked,
li[data-task='*'] > input:checked,
li[data-task='*'] > p > input:checked,
li[data-task='-'] > input:checked,
li[data-task='-'] > p > input:checked,
li[data-task='<'] > input:checked,
li[data-task='<'] > p > input:checked,
li[data-task='>'] > input:checked,
li[data-task='>'] > p > input:checked,
li[data-task='I'] > input:checked,
li[data-task='I'] > p > input:checked,
li[data-task='b'] > input:checked,
li[data-task='b'] > p > input:checked,
li[data-task='c'] > input:checked,
li[data-task='c'] > p > input:checked,
li[data-task='d'] > input:checked,
li[data-task='d'] > p > input:checked,
li[data-task='f'] > input:checked,
li[data-task='f'] > p > input:checked,
li[data-task='k'] > input:checked,
li[data-task='k'] > p > input:checked,
li[data-task='l'] > input:checked,
li[data-task='l'] > p > input:checked,
li[data-task='p'] > input:checked,
li[data-task='p'] > p > input:checked,
li[data-task='u'] > input:checked,
li[data-task='u'] > p > input:checked,
li[data-task='w'] > input:checked,
li[data-task='w'] > p > input:checked {
  --checkbox-marker-color: transparent;
  border: none;
  border-radius: 0;
  background-image: none;
  background-color: currentColor;
  -webkit-mask-size: var(--checkbox-icon);
  -webkit-mask-position: 50% 50%;
}
/* ... */

